# vonage-python-sdk

./: .bumpversion.cfg  .coveragerc  .editorconfig  .gitignore  .mend  .pre-commit-config.yaml  .requirements-dev.txt  .travis.yml  CHANGES.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_TR.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  OPENTOK_TO_VONAGE_MIGRATION.md  README.FR  README.md  V3_TO_V4_SDK_MIGRATION_GUIDE.md  codecov.yml  pants.ci.toml  pants.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_nexmo.py  tox.ini
.github/: main.workflow
.scripts/: update_vonage_versions.py
_dev_scripts/: update_versions.py
account/: BUILD  CHANGES.md  README.md  pyproject.toml
application/: BUILD  CHANGES.md  README.md  pyproject.toml
camara_auth/: BUILD  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat  quickstart.rst  reference.rst
gnp_sim_swap/: BUILD  pyproject.toml
gnp_sim_swap/src/vonage_gnp_sim_swap/: __init__.py  camara_auth.py  sim_swap.py
gnp_sim_swap/tests/: BUILD  _test_camara_auth.py  test_sim_swap.py
gnp_sim_swap/tests/data/: check_sim_swap.json
http_client/: BUILD  CHANGES.md  README.md  pyproject.toml
http_client/src/http_client/: auth.py  errors.py  http_client.py
http_client/src/vonage_http_client/: BUILD  __init__.py  auth.py  errors.py  http_client.py
http_client/tests/: BUILD  test_auth.py  test_http_client.py
http_client/tests/data/: 400.json  400.txt  401.json  403.json  429.json  500.json  example_post.json
http_client/tests/data/video/: create_archive.json  create_session.json  list_archives.json  list_broadcasts.json  play_dtmf_invalid_error.json
identity_insights/: BUILD  README.md  pyproject.toml
jwt/: BUILD  CHANGES.md  README.md  pyproject.toml
jwt/src/vonage_jwt/: __init__.py  errors.py  jwt.py  verify_jwt.py
jwt/tests/: BUILD  test_jwt_generator.py  test_verify_jwt.py
libs/: format_phone_number.py  pyproject.toml  testing_utils.py
messages/: BUILD  CHANGES.md  README.md  pyproject.toml
messages/src/vonage_messages/: __init__.py  enums.py  errors.py  messages.py  responses.py
messages/src/vonage_messages/models/: BUILD  __init__.py  base_message.py  enums.py  messenger.py  mms.py  rcs.py  sms.py  viber.py  whatsapp.py
messages/tests/: BUILD  _test_verify_v2.py  test_messages.py  test_messenger_models.py  test_mms_models.py  test_models.py  test_rcs_models.py  test_sms_models.py  test_viber_models.py  test_whatsapp_models.py
messages/tests/data/: invalid_error.json  low_balance_error.json  not_found.json  send_message.json  send_message_with_failover.json
network_auth/: BUILD  CHANGES.md  README.md  pyproject.toml
network_auth/src/vonage_network_auth/: __init__.py  network_auth.py  requests.py  responses.py
network_auth/tests/: BUILD  test_network_auth.py
network_auth/tests/data/: oidc_request_permissions_error.json
network_number_verification/: BUILD  CHANGES.md  README.md  pyproject.toml
network_sim_swap/: BUILD  CHANGES.md  README.md  pyproject.toml
network_sim_swap/src/vonage_network_sim_swap/: __init__.py  requests.py  responses.py  sim_swap.py
network_sim_swap/tests/: BUILD  test_sim_swap.py
network_sim_swap/tests/data/: get_swap_date.json
nexmo/: __init__.py  _internal.py
number_insight/: BUILD  CHANGES.md  README.md  pyproject.toml
number_insight_v2/: BUILD  CHANGES.md  README.md  pyproject.toml
number_management/: BUILD  CHANGES.md  README.md  pyproject.toml
requirements/: docs.txt
sms/: BUILD  CHANGES.md  README.md  pyproject.toml
sms/src/vonage_sms/: __init__.py  errors.py  models.py  requests.py  responses.py  sms.py
sms/tests/: BUILD  test_sms.py
sms/tests/data/: conversion_not_enabled.html  default.json  fraud_score.json  send_long_sms.json  send_sms.json  send_sms_error.json  send_sms_error_throttling.json  send_sms_partial_error.json
subaccounts/: BUILD  CHANGES.md  README.md  pyproject.toml
testing_utils/: BUILD
tests/: conftest.py  test_account.py  test_application.py  test_applications.py  test_applications_v2.py  test_camara_auth.py  test_client.py  test_conversation.py  test_getters_setters.py  test_insight.py  test_internal.py  test_jwt.py  test_meetings.py  test_message_search.py  test_messages.py  test_messages_send_message.py  test_messages_validate_input.py  test_misc.py  test_ncco.py  test_ncco_actions.py  test_nexmo.py  test_number_insight.py  test_number_insight_v2.py  test_number_management.py  test_number_verification.py  test_numbers.py  test_packages.py  test_proactive_connect.py  test_redact.py  test_rest_calls.py  test_search.py  (+13 more)
users/: BUILD  CHANGES.md  README.md  pyproject.toml
users/src/vonage_users/: __init__.py  common.py  errors.py  requests.py  responses.py  users.py
users/tests/: BUILD  test_users.py
users/tests/data/: list_users.json  list_users_options.json  updated_user.json  user.json  user_not_found.json
verify/: BUILD  CHANGES.md  README.md  pyproject.toml
verify/src/vonage_verify/: __init__.py  enums.py  errors.py  language_codes.py  requests.py  responses.py  verify.py
verify/tests/: BUILD  test_models.py  test_verify.py
verify/tests/data/: check_code.json  verify_request.json  verify_request_error.json
verify_v2/: BUILD  CHANGES.md  README.md  pyproject.toml
verify_v2/src/vonage_verify_v2/: __init__.py  enums.py  requests.py  responses.py  verify_v2.py
verify_v2/tests/: BUILD  test_models.py  test_verify_v2.py
verify_v2/tests/data/: check_code_400.json  verify_request.json
vonage/: BUILD  CHANGES.md  README.md  __init__.py  _internal.py  client.py  pyproject.toml  sms.py  voice.py
vonage/src/vonage/: BUILD  __init__.py  _version.py  vonage.py
vonage/tests/: test_vonage.py
vonage/vonage/: client.py  errors.py  sms.py
vonage_utils/: BUILD  CHANGES.md  README.md  pyproject.toml
vonage_utils/src/vonage_utils/: BUILD  __init__.py  _version.py  errors.py  models.py  types.py  utils.py
vonage_utils/src/vonage_utils/types/: phone_number.py
vonage_utils/tests/: BUILD  test_format_phone_number.py  test_remove_none_values.py
(+448 files in other folders)
