[project]
name = "vonage-http-client"
dynamic = ["version"]
description = "An HTTP client for making requests to Vonage APIs."
readme = "README.md"
authors = [{ name = "Vonage", email = "devrel@vonage.com" }]
requires-python = ">=3.8"
dependencies = [
  "vonage-utils>=1.1.3",
  "vonage-jwt>=1.1.2",
  "requests>=2.27.0",
  "typing-extensions>=4.9.0",
  "pydantic>=2.7.1",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Vonage/vonage-python-sdk"

[tool.setuptools.dynamic]
version = { attr = "vonage_http_client._version.__version__" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
