[project]
name = "vonage"
dynamic = ["version"]
description = "Python Server SDK for using Vonage APIs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "vonage-utils>=1.1.3",
  "vonage-http-client>=1.4.1",
  "vonage-account>=1.0.1",
  "vonage-application>=1.0.2",
  "vonage-messages>=1.2.1",
  "vonage-number-insight>=1.0.1",
  "vonage-numbers>=1.0.1",
  "vonage-sms>=1.1.2",
  "vonage-subaccounts>=1.0.2",
  "vonage-users>=1.1.3",
  "vonage-verify>=1.1.2",
  "vonage-verify-v2>=1.1.3",
  "vonage-video>=1.0.0",
  "vonage-voice>=1.0.4",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]
[[project.authors]]
name = "Vonage"
email = "devrel@vonage.com"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/Vonage/vonage-python-sdk"

[tool.setuptools.dynamic.version]
attr = "vonage._version.__version__"
