[project]
name = 'vonage-utils'
version = '1.1.2'
description = 'Utils package containing objects for use with Vonage APIs'
readme = "README.md"
authors = [{ name = "Vonage", email = "devrel@vonage.com" }]
dependencies = ["typing_extensions>=4.9.0", "pydantic>=2.7.1"]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Vonage/vonage-python-sdk"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
